banner area was added.

--- a/01- PortfolioWebsite/index.html
+++ b/01- PortfolioWebsite/index.html
@@ -58,6 +58,35 @@
     </header>
     <!-- *************** End Header Area ************** -->
 
+    <!-- *************** Start Main Area ************** -->
+    <main class="site-main">
+
+    <!-- **************** Start Banner Area ************* -->
+    <section class="site-banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 site-title">
+                    <h3 class="title-text">Hey</h3>
+                    <h1 class="title-text text-uppercase">I am Nur</h1>
+                    <h4 class="title-text text-uppercase">Front-End Developer</h4>
+                    <div class="site-buttons">
+                    <div class="d-flex flex-row flex-wrap">
+                        <button class="btn button primary-button mx-4 text-uppercase" type="button">Hire me!</button>
+                        <button type="button" class="btn button secondary-button text-uppercase">get cv</button>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <img src="./img/banner/banner-image.png" alt="banner-image" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- **************** End Banner Area ************* -->
+
+    </main>
+    <!-- *************** End Main Area ************** -->
+
 
     <!-- Jquery JS File -->
     <script src="./js/jquery.3.4.1.js"></script>
