--- a/02-OnlineStoreE-commerce/index.html
+++ b/02-OnlineStoreE-commerce/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
+    <!-- Slick Slider -->
+    <link rel="stylesheet" href="./css/slick.css">
+
+
     <!-- Font Awesome CDN -->
     <script src="https://kit.fontawesome.com/66035f1c47.js" crossorigin="anonymous"></script>
 
@@ -26,14 +30,15 @@
             <div class="row">
                 <div class="col-md-4 col-sm-12 col-12">
                     <div class="btn-group">
-                        <button class="btn border dropdown-toggle my-md-4 my-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">USD</button>
+                        <button class="btn border dropdown-toggle my-md-4 my-2 text-white" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">USD</button>
                         <div class="dropdown-menu">
                             <a href="#" class="dropdown-item">ERU - Euro</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-12 text-center">
-                    <h2 class="my-md-3 site-title">Online Store</h2>
+                    <h2 class="my-md-3 site-title text-white">Online Store</h2>
                 </div>
                 <div class="col-md-4 col-12 text-right">
                     <p class="my-md-4 header-links">
@@ -43,11 +48,73 @@
                 </div>
             </div>
         </div>
+
+        <div class="container-fluid p-0">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">FEATURES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">COLLECTION</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">SHOP</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ABOUT US</a>
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="navbar-nav">
+                    <li class="nav-item border rounded-circle mx-2 search-icon">
+                        <i class="fas fa-search p-2"></i>
+                    </li>
+                    <li class="nav-item border rounded-circle mx-2 basket-icon">
+                        <i class="fas fa-shopping-basket p-2"></i>
+                    </li>
+                </div>
+            </nav>
+        </div>
     </header>
     <!-- Header End -->
-    <main></main>
-    <footer></footer>
 
+    <!-- Main Section Start -->
+    <main>
+        <!-- First Slider -->
+        <div class="container-fluid p-0">
+            <div class="site-slider">
+                <div class="slider-one">
+                    <div>
+                        <img src="./assets/item-1.jpg" class="img-fluid" alt="Banner 1">
+                    </div>
+                    <div>
+                        <img src="./assets/item-2.jpg" class="img-fluid" alt="Banner 2">
+                    </div>
+                    <div>
+                        <img src="./assets/item-3.jpg" class="img-fluid" alt="Banner 3">
+                    </div>
+                </div>
+                <div class="slider-btn">
+                    <span class="prev position-top"><i class="fas fa-chevron-circle-left"></i></span>
+                    <span class="next position-top right-0"><i class="fas fa-chevron-circle-right"></i></span>
+                </div>
+            </div>
+        </div>
+        <!-- First Slider -->
+    </main>
+    <!-- Main Section End -->
+
+    <footer></footer>
 
 
     <!-- Bootstrap CDN -->
@@ -60,6 +127,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
+
+    <!-- Slick Slider -->
+    <script src="./js/slick.min.js"></script>
+
+
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
