--- a/02-OnlineStoreE-commerce/index.html
+++ b/02-OnlineStoreE-commerce/index.html
@@ -95,13 +95,13 @@
             <div class="site-slider">
                 <div class="slider-one">
                     <div>
-                        <img src="./assets/item-1.jpg" class="img-fluid" alt="Banner 1">
+                        <img src="./assets/item-1.jpg" class="img-fluid banner-img" alt="Banner 1">
                     </div>
                     <div>
-                        <img src="./assets/item-2.jpg" class="img-fluid" alt="Banner 2">
+                        <img src="./assets/item-2.jpg" class="img-fluid banner-img" alt="Banner 2">
                     </div>
                     <div>
-                        <img src="./assets/item-3.jpg" class="img-fluid" alt="Banner 3">
+                        <img src="./assets/item-3.jpg" class="img-fluid banner-img" alt="Banner 3">
                     </div>
                 </div>
                 <div class="slider-btn">
@@ -111,6 +111,60 @@
             </div>
         </div>
         <!-- First Slider -->
+
+        <!-- Second Slider -->
+        <div class="container-fluid">
+            <div class="site-slider-two px-md-4">
+                <div class="row slider-two px-md-4">
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./assets/img-1.jpg" class="img-fluid second-slider-img" alt="Product 1">
+                        <span class="border site-btn btn-span">Lorem</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./assets/img-2.jpg" class="img-fluid second-slider-img" alt="Product 2">
+                        <span class="border site-btn btn-span">Lorem</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./assets/img-3.jpg" class="img-fluid second-slider-img" alt="Product 3">
+                        <span class="border site-btn btn-span">Lorem</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./assets/img-4.jpg" class="img-fluid second-slider-img" alt="Product 4">
+                        <span class="border site-btn btn-span">Lorem</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./assets/img-5.jpg" class="img-fluid second-slider-img" alt="Product 5">
+                        <span class="border site-btn btn-span">Lorem</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./assets/img-6.jpg" class="img-fluid second-slider-img" alt="Product 6">
+                        <span class="border site-btn btn-span">Lorem</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./assets/img-7.jpg" class="img-fluid second-slider-img" alt="Product 7">
+                        <span class="border site-btn btn-span">Lorem</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./assets/img-8.jpg" class="img-fluid second-slider-img" alt="Product 8">
+                        <span class="border site-btn btn-span">Lorem</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./assets/img-9.jpg" class="img-fluid second-slider-img" alt="Product 9">
+                        <span class="border site-btn btn-span">Lorem</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./assets/img-10.jpg" class="img-fluid second-slider-img" alt="Product 10">
+                        <span class="border site-btn btn-span">Lorem</span>
+                    </div>
+                </div>
+                <div class="slider-btn">
+                    <span class="prev position-top"><i class="fas fa-chevron-circle-left fa-2x text-secondary"></i></span>
+                    <span class="next position-top right-0"><i class="fas fa-chevron-circle-right fa-2x text-secondary"></i></span>
+                </div>
+            </div>
+        </div>
+        </div>
+        <!-- Second Slider -->
     </main>
     <!-- Main Section End -->
 
