completed banner area.

--- a/01- PortfolioWebsite/index.html
+++ b/01- PortfolioWebsite/index.html
@@ -76,14 +76,16 @@
                     </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12">
-                    <img src="./img/banner/banner-image.png" alt="banner-image" class="img-fluid">
+                <div class="col-lg-6 col-md-12 banner-image">
+                    <img src="./img/banner/banner-image.jpg" alt="banner-image" class="img-fluid">
                 </div>
             </div>
         </div>
     </section>
     <!-- **************** End Banner Area ************* -->
 
+
+    
     </main>
     <!-- *************** End Main Area ************** -->
 
