started about area.

--- a/01- PortfolioWebsite/index.html
+++ b/01- PortfolioWebsite/index.html
@@ -85,7 +85,36 @@
     <!-- **************** End Banner Area ************* -->
 
 
-    
+    <!-- **************** About Area ************* -->
+    <section class="about-area">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-5 col-md-12">
+                    <div class="about-image">
+                        <img src="./img/about-us.jpg" alt="About us" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 about-title">
+                    <h2 class="text-uppercase pt-5">
+                        <span>Let Me</span>
+                        <span>introduce</span>
+                        <span>myself</span>
+                    </h2>
+                    <div class="paragraph py-4 w75">
+                        <p class="para">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo reprehenderit est itaque, magnam officiis soluta assumenda deleniti quibusdam sed odio!
+                        </p>
+                        <p class="para">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae suscipit doloremque quo libero unde in facilis, officiis soluta. Architecto excepturi labore suscipit? Ipsum deserunt recusandae reiciendis autem temporibus minima eveniet nihil quaerat, minus quasi qui voluptate eius, amet, accusamus possimus?
+                        </p>
+                    </div>
+                    <button type="button" class="btn button primary-button text-uppercase">download cv</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- **************** End About Area ************* -->
+
     </main>
     <!-- *************** End Main Area ************** -->
 
