--- a/01- PortfolioWebsite/index.html
+++ b/01- PortfolioWebsite/index.html
@@ -120,7 +120,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-6 col-lg-12 col-md-12">
-                    <div class="row">
+                    <div class="first-row row">
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="single-brand">
                                 <img src="./img/brands/logo1.png" alt="Brand-1">
@@ -179,8 +179,13 @@
                             </h2>
                         </div>
                         <div class="d-flex flex-row flex-wrap call-area">
-                            
+                            <span><i class="fas fa-phone-alt fa-3x px-3"></i></span>
+                            <div class="call-now">
+                                <a href="#" class="text-uppercase h4 font-roboto"> Call Now</a>
+                                <span class="font-roboto py-2">(+97)-800-555-4986</span>
+                            </div>
                         </div>
+                        <div class="bg-panel"></div>
                     </div>
                 </div>
             </div>
